# llama-forge

./: .gitattributes  .gitignore  AGENTS.md  AUTHORS  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
gui/: llama-cpp-gui-build.sh  llama_cpp_manager.py
llama_gui/: CMakeLists.txt  app.py  build.sh
llama_gui/core/: converter_logic.py  llama_detect.py  quant_logic.py
llama_gui/gui/: __init__.py  chat_tab.py  converter.py  quant_tab.py  server_tab.py
llama_gui/utils/: gguf_info.py  ram_detect.py  subprocess_stream.py  terminal.py
scripts/: sync-upstream.sh
